fix: make hero font smaller to fit on small phones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,7 +150,7 @@ main {
 }
 
 .hero-text-style {
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: 700;
     line-height: 90%;
     color: #ffffff;
@@ -405,6 +405,10 @@ footer {
         flex-direction: row;
         justify-content: space-between;
         padding: 2rem 0;
+    }
+
+    .hero-text-style {
+        font-size: 2.5rem;
     }
 
     /* Differences Section */
